--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,14 +8,10 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  padding-bottom: 15px;
   color: white;
 }
 
 .App-intro {
   font-size: large;
-}
-.content {
-  margin-left: 60px;
 }
