--- a/client/src/components/dashboard/dashboard.css
+++ b/client/src/components/dashboard/dashboard.css
@@ -20,3 +20,12 @@
 .demo-list-control {
   max-width: 700px
 }
+
+.questionbox {
+  color: #42797C;
+  border: 1px solid #51D9FF;
+  height: 400px;
+  width: 100%;
+  margin: auto;
+  margin-top: 6px;
+}
