Starts to get question show page going. Answers/Answering next

--- a/client/src/components/dashboard/pages/questionUI/questionUI.css
+++ b/client/src/components/dashboard/pages/questionUI/questionUI.css
@@ -1,3 +1,9 @@
-.question-box {
-  /*border: 1 white solid;*/
+.question {
+  text-align: center;
+  color: #41E0DB;
+  text-decoration: underline;
+}
+
+.answer {
+  
 }
