--- a/client/src/components/dashboard/pages/search/search.css
+++ b/client/src/components/dashboard/pages/search/search.css
@@ -5,3 +5,12 @@
 .search-options {
   text-align: 'center';
 }
+
+.search-result {
+
+}
+
+.search-result:hover {
+  background-color: #36D0CF;
+  cursor: pointer;
+}
