--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,10 @@
 .App-intro {
   font-size: large;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #222;
+}
