--- a/client/src/components/dashboard/pages/questionUI/questionUI.css
+++ b/client/src/components/dashboard/pages/questionUI/questionUI.css
@@ -8,3 +8,12 @@
   cursor: pointer;
   color: #00FFF8;
 }
+
+.fa-window-close {
+  cursor: pointer;
+  color: #00FFF8;
+}
+
+.editbox {
+  color: #41E0DB;
+}
