--- a/client/src/components/dashboard/pages/addnew/addNew.css
+++ b/client/src/components/dashboard/pages/addnew/addNew.css
@@ -24,11 +24,12 @@ dialog {
     margin: 10px 10px
 }
 .form-style-8{
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Open Sans Condensed', arial, sans;
-    width: 500px;
-    padding: 24px;
+    padding: 12px;
     background: #2F2E2E;
-    margin: 50px auto;
+    margin-top: 20px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
     -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
     -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
@@ -41,8 +42,8 @@ dialog {
     color: #E5E5E5;
     font-size: 18px;
     font-weight: 100;
-    padding: 20px;
-    margin: -20px -20px 20px -20px;
+    padding: 10px 10px;
+    margin: 10px 10px;
 }
 .form-style-8 input[type="text"],
 .form-style-8 input[type="date"],
